Fixes sidebar bugs and moves clock to upper right corner on mobile

--- a/client/sidebar.css
+++ b/client/sidebar.css
@@ -1,8 +1,7 @@
 @media(max-width: 600px) {
   #sidebar {
-    position: fixed;
-    top: -1px;
-    left: -31px;
+    position: absolute;
+    left: -15px;
     transition: all 0.5s;
     z-index: 100;
     height: 100vh;
