--- a/client/templates/application/header.css
+++ b/client/templates/application/header.css
@@ -1,3 +1,4 @@
+/* Large screen */
 @media(min-width: 600px) {
   .top {
   	margin-top: 50px;
@@ -8,8 +9,21 @@
   }
 }
 
-@media(max-width: 600px;) {
+/* Small screen */
+@media(max-width: 600px) {
   .top {
     margin: 0px;
+  }
+
+  .small-screen-timer {
+    position: absolute;
+    top: -27px;
+    right: -41px;
+    transform: scale(0.5, 0.5);
+  }
+
+  .menu {
+    position: absolute;
+    left: -10px;
   }
 }
